# network-device-model

./: .gitignore  CLAUDE.md  README.md  U_AAA_Services_SRG_V2R2_Manual-xccdf.xml  pyproject.toml  ralph-loop-kiro-specs-prompt.md  ralph-loop-kiro-specs-script.sh  skills-lock.json
.kiro/specs/concentrate-shared-rules/: .config.kiro  requirements.md
.kiro/specs/cross-aggregate-resolver/: .config.kiro  design.md  progress.md  requirements.md  tasks.md
.kiro/specs/network-device-model/: .config.kiro  design.md
.kiro/specs/rmf-scoring-tally/: .config.kiro  design.md  progress.md  requirements.md  tasks.md
.kiro/specs/stig-catalog/: .config.kiro  design.md  progress.md  requirements.md  specs_time.md  summary.html  tasks.md
.kiro/specs/xccdf-parser-unify/: .config.kiro  design.md  progress.md  requirements.md  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
device_definition_models/: __init__.py  models.py  system.py
docs/agents/: domain.md  issue-tracker.md  ralph-loop.md
network_models/: __init__.py  _enum.py  base.py
network_models/device/: __init__.py  components.py  definition.py  vocab.py
network_models/io/: __init__.py  _xml.py  cci.py  consistency.py  scap.py
network_models/stig/: __init__.py  catalog.py  vocab.py
network_models/system/: __init__.py  assessment.py  authorization.py  l2.py  poam.py  topology.py  vocab.py
scripts/: __init__.py  import_devicetype_library.py  import_stig_library.py
tests/: test_devicetype_library.py  test_io_scap.py  test_models.py  test_stig_catalog.py  test_system_assessment.py  test_system_stig.py
